[gd_scene load_steps=2 format=3 uid="uid://cb8dabi0i13ld"]

[ext_resource type="Script" path="res://scripts/color_button.gd" id="1_uisc4"]

[node name="ColorButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_uisc4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="Button" type="Button" parent="ColorRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 32, 0, 32, 32, 0, 32)
closed = true
width = 2.0

[connection signal="mouse_entered" from="ColorRect/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
